[package]
name = "cleoselene"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
engine = { path = "../engine" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
bytes = "1.5"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
dashmap = "6.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
notify = "8.2.0"
webrtc = "0.11.0"
lazy_static = "1.4.0"
flate2 = "1.0"
clap = { version = "4.4", features = ["derive"] }
rust-embed = "8.0"
mime_guess = "2.0"
zstd = "0.13.3"

[dev-dependencies]
tokio-tungstenite = "0.28.0"
url = "2.5.7"
